# dynamic-math

./: ARCHITECTURE_DEEP_DIVE.md  Cargo.toml  README.md  build.sh  fix_structure.sh  index.html  integration_example.js  math_expression.pest  step_by_step.rs  structure_fix.md  verify_structure.sh  virtual_compiler_extensions.rs
lib/: lib.rs
src/: ast.rs  cache.rs  codegen.rs  lib.rs  optimizer.rs  parser.rs  parser.rs.bak  runtime.rs
tests/: test_integration.rs
