[package]
name = "math-compiler-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4"

# For parsing mathematical expressions
pest = "2.7"
pest_derive = "2.7"

# For WASM bytecode generation
walrus = "0.20"

# For error handling
thiserror = "1.0"

# For serialization (debugging/logging)
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WebAssembly",
  "WebAssemblyModule",
  "WebAssemblyInstance",
  "WebAssemblyMemory",
  "WebAssemblyTable",
  "Function",
  "Uint8Array",
]

# Optimize for small code size
[profile.release]
opt-level = "s"
lto = true
panic = "abort"

# WASM-specific optimizations
[profile.wee_alloc]
inherits = "release"
opt-level = "s"
